# malwares

./: README.md
Acad/: Trojan.Acad.Bursted.c  Virus.Acad.Bursted.c  Virus.Acad.Bursted.d  Virus.Acad.Bursted.e  Virus.Acad.Bursted.f  Virus.Acad.Bursted.g  Virus.Acad.Bursted.i  Virus.Acad.Bursted.k  Virus.Acad.Bursted.m  Virus.Acad.Bursted.n  desktop.ini
AutoIt/: Worm.Win32.AutoIt.ad  Worm.Win32.AutoIt.av  Worm.Win32.AutoIt.aw  Worm.Win32.AutoIt.bh
Bat/: Backdoor.BAT.RA-based.b  Constructor.BAT.BVGHH.txt  Constructor.BAT.Restart.30.txt  Constructor.BAT.Restart.40.txt  Constructor.BAT.Restart.50.txt  Constructor.BAT.Restart.80.txt  Constructor.BAT.Restart.c.txt  Constructor.BAT.Restart.txt  Constructor.BAT.Sbc.txt  Constructor.BAT.c.txt  Constructor.BAT.txt  Email-Flooder.BAT.Prob.txt  Email-Worm.BAT.Alcobul.b.txt  Email-Worm.BAT.Alcobul.txt  Email-Worm.BAT.Arica.txt  Email-Worm.BAT.BWG.b.txt  Email-Worm.BAT.BWG.c.txt  Email-Worm.BAT.BWG.d.txt  Email-Worm.BAT.BWG.e.txt  Email-Worm.BAT.BWG.f.txt  Email-Worm.BAT.BWG.i.txt  Email-Worm.BAT.BWG.j.txt  Email-Worm.BAT.BWG.txt  Email-Worm.BAT.Calhob.txt  Email-Worm.BAT.Eversaw.txt  Email-Worm.BAT.Flove.txt  (+1947 more)
PHP/: desktop.ini  (+15 more)
Unix Family/Linux.lrk.e/fileutils-3.13/: Makefile  Makefile.am  acconfig.h  config.h
Unix Family/Linux.lrk.e/fileutils-3.13/intl/: Makefile  VERSION  l10nflist.c
Unix Family/Linux.lrk.e/fileutils-3.13/lib/: Makefile  Makefile.in  getdate.c  posixtm.c
Unix Family/Linux.lrk.e/fileutils-3.13/src/: Makefile  Makefile.am  du.c  ls.c
Unix Family/Linux.lrk.e/sh-utils-1.16/: Makefile  Makefile.am  Makefile.in  README  THANKS  TODO  acconfig.h  aclocal.m4  config.cache  config.h  config.h.in  config.status  configure  configure.in
Unix Family/Linux.lrk.e/sh-utils-1.16/doc/: Makefile  Makefile.am  Makefile.in  sh-utils.info  version.texi
Unix Family/Linux.lrk.e/sh-utils-1.16/intl/: Makefile
Unix Family/Linux.lrk.e/sh-utils-1.16/lib/: Makefile  Makefile.am  Makefile.in  posixtm.c
Unix Family/Linux.lrk.e/sh-utils-1.16/m4/: Makefile  Makefile.in
Unix Family/Linux.lrk.e/sh-utils-1.16/man/: Makefile  Makefile.am  Makefile.in  basename.1  chroot.1  date.1  dirname.1  echo.1  env.1  expr.1  false.1  groups.1  hostname.1  id.1  logname.1  nice.1  nohup.1  pathchk.1  printenv.1  printf.1  pwd.1  sleep.1  stty.1  su.1  tee.1  test.1  true.1  tty.1  uname.1  users.1  who.1  whoami.1  yes.1
Unix Family/Linux.lrk.e/sh-utils-1.16/po/: Makefile  Makefile.in  POTFILES  POTFILES.in  cat-id-tbl.c  de.gmo  de.po  fr.gmo  fr.po  nl.gmo  nl.po  pt.gmo  pt.po  sh-utils.pot  sv.gmo  sv.po
Unix Family/Linux.lrk.e/sh-utils-1.16/src/: Makefile  Makefile.am  Makefile.in  false.sh  groups  nohup  su.c  true.sh
Unix Family/Linux.lrk.e/sh-utils-1.16/tests/: Makefile  Makefile.am  Makefile.in  nice
Unix Family/Linux.lrk.e/sh-utils-1.16/tests/date/: Makefile  Makefile.in  t9.exp
Unix Family/Linux.lrk.e/shadow-961025/lib/: Makefile  Makefile.am  Makefile.in  commonio.c  defines.h  dialchk.c  dialup.c  dialup.h  encrypt.c  faillog.h  fputsx.c  getdef.c  getdef.h  getpass.c  grdbm.c  grent.c  groupio.c  groupio.h  grpack.c  gsdbm.c  gshadow.c  gshadow_.h  gspack.c  lastlog_.h  lockpw.c  md5crypt.c  mkdir.c  port.c  port.h  prototypes.h  putgrent.c  putpwent.c  putspent.c  pwauth.c  pwauth.h  pwdbm.c  pwent.c  pwio.c  pwio.h  pwpack.c  (+18 more)
Unix Family/Linux.lrk.e/shadow-961025/libmisc/: Makefile  Makefile.am  Makefile.in  addgrps.c  age.c  basename.c  chkname.c  chowndir.c  chowntty.c  console.c  copydir.c  entry.c  env.c  failure.c  fields.c  hushed.c  isexpired.c  limits.c  list.c  log.c  login_access.c  login_desrpc.c  login_krb.c  loginprompt.c  mail.c  motd.c  obscure.c  pwd2spwd.c  rlogin.c  salt.c  setugid.c  setup.c  setupenv.c  shell.c  strtoday.c  suauth.c  sub.c  sulog.c  ttytype.c  tz.c  (+4 more)
Unix Family/Linux.lrk.e/shadow-961025/src/: Makefile  Makefile.am  chfn.c  chsh.c  login.c  passwd.c
Unix Family/Linux.lrk.e/ssh-2.0.13/lib/sshapputil/: Makefile.am  Makefile.in  sshuserfile.c  sshuserfile.h  sshuserfilebuf.c
Unix Family/Linux.lrk.e/ssh-2.0.13/lib/sshapputil/tests/: Makefile.am  Makefile.in  t-userfile.c
Unix Family/Linux.lrk.e/ssh-2.0.13/lib/sshpgp/: Makefile.am  Makefile.in  pgp_cipher.c  pgp_file.c  pgp_gen.c  pgp_key.c  pgp_keydb.c  pgp_packet.c  pgp_s2k.c
Unix Family/Linux.lrk.e/ssh-2.0.13/lib/sshpgp/tests/: Makefile.am  Makefile.in  pgpfiledump.c  pgpkeysearch.c  t-s2k.c
Unix Family/Linux.lrk.e/ssh-2.0.13/lib/sshproto/: Makefile.am  Makefile.in  sshauthc.c  sshauths.c  sshcipherlist.c  sshcipherlist.h  sshconn.c  sshcrdown.c  sshcross.c  sshcrup.c  sshtrans.c  trcommon.c  trcommon.h  trkex.c  trkex.h
Unix Family/Linux.lrk.e/ssh-2.0.13/lib/sshproto/tests/: Makefile.am  Makefile.in  t-conn.c  t-cross.c  t-pubkeyencode.c  t-tr.c  t-userauth.c
Unix Family/Linux.lrk.e/ssh-2.0.13/lib/sshreadline/: Makefile.am  Makefile.in  sshreadline.c  sshreadline.h
Unix Family/Linux.lrk.e/ssh-2.0.13/lib/sshreadline/tests/: Makefile.am  Makefile.in  t-readline.c
Unix Family/Linux.lrk.e/ssh-2.0.13/lib/sshsession/: Makefile.am  Makefile.in  pty-bsd.c  pty-cray.c  pty-getpseudotty.c  pty-getpty.c  pty-openpty.c  pty-ptmx.c  pty-pts.c  pty-sco.c  sigchld.c  sigchld.h  sshsessionincludes.h  sshsia.c  sshtty.c  sshtty.h  sshttymodes.h  sshunixpipestream.c  sshunixpipestream.h  sshunixptystream.c  sshunixuser.c  sshuser.h  wtmp.c
Unix Family/Linux.lrk.e/ssh-2.0.13/lib/sshutil/tests/: Makefile.am  Makefile.in  t-asn1.c  t-base64.c  t-buffer.c  t-crc32.c  t-debug.c  t-dllist.c  t-dns.c  t-dsprintf.c  t-encode.c  t-filexfer.c  t-inet_ntoa.c  t-localstream.c  t-malloc.c  t-mapping.c  t-psystem.c  t-replace.c  t-serial.c  t-snprintf.c  t-socks.c  t-sshlist.c  t-sshutf8.c  t-stream.c  t-streampair.c  t-time.c  t-timemeasure.c  t-udp.c  t-url.c
Unix Family/Linux.lrk.e/ssh-2.0.13/lib/zlib/: ChangeLog  Makefile.am  Makefile.in  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
Unix Family/Linux.lrk.e/ssh-2.0.13/lib/zlib/contrib/iostream2/: zstream.h
(+8006 files in other folders)
