## Process this file with automake to produce Makefile.in
man_MANS = basename.1 chroot.1 date.1 dirname.1 echo.1 env.1 \
expr.1 false.1 groups.1 hostname.1 id.1 logname.1 pathchk.1 \
printenv.1 printf.1 pwd.1 sleep.1 tee.1 test.1 true.1 tty.1 \
users.1 who.1 whoami.1 yes.1 nice.1 nohup.1 su.1 stty.1 uname.1

# Files to install if configure determines we can build the corresponding
# executables.
# MANFILES2 = nice.1 nohup.1 su.1 stty.1 uname.1
