
AUTOMAKE_OPTIONS = 1.0 foreign

noinst_LIBRARIES = misc

libdir = ${prefix}/lib

INCLUDES = -I$(top_srcdir)/lib

misc_SOURCES = addgrps.c age.c basename.c chkname.c chowndir.c chowntty.c \
 console.c copydir.c entry.c env.c failure.c fields.c hushed.c \
 isexpired.c limits.c list.c log.c login_access.c login_desrpc.c \
 login_krb.c loginprompt.c mail.c motd.c obscure.c pwd2spwd.c rlogin.c \
 salt.c setugid.c setup.c setupenv.c shell.c strtoday.c suauth.c \
 sub.c sulog.c ttytype.c tz.c ulimit.c utmp.c valid.c xmalloc.c

